--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     .flex-container {
       display: flex;
       flex-wrap: wrap;
-      margin: 20px 20px 20px;
+      margin: 48px 16px 32px;
       padding: 0px 0px 0px;
     }
 
@@ -38,10 +38,9 @@
       flex: auto;
       min-width: 240px;
       max-width: 1000px;
-      margin: 0px 0px 0px;
+      margin: 16px 16px;
       padding: 20px 20px 20px;
       background-color: #ffffff;
-
 
       text-align: center;
       font-size: 20px;
