--- a/index.html
+++ b/index.html
@@ -8,139 +8,83 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/main.css" />
   <title>Erinnerungen</title>
-
   <style>
-    body,
-    html {
-      height: 100%;
-      margin: 0px;
-      background-color: #F0F0F6;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    .flex-container {
-      display: flex;
-      flex-wrap: wrap;
-      margin: 48px 16px 32px;
-      padding: 0px 0px 0px;
-    }
-
-    @media (max-width: 600px) {
-      .flex-container {
-        flex-direction: column;
-      }
-    }
-
-    [class^='child'] {
-      flex: auto;
-      min-width: 240px;
-      max-width: 1000px;
-      margin: 16px 16px;
-      padding: 20px 20px 20px;
-      background-color: #ffffff;
-
-      text-align: center;
-      font-size: 20px;
-    }
-
-    .child-one {}
-
-    .child-two {}
-
-    .child-three {}
-
-    .child-four {}
   </style>
 </head>
 
 <body>
   <header>
   </header>
-
-  <div class="flex-container">
-
-
-    <div class="child-one">
-
-      <h1>Schoko-Cookies 1</h1>
-
-      <h2>75g Butter<br />
-        100g Rohzucker<br />
-        ¼TL Salz<br />
-        1 Ei<br />
-        30g Kakaopulver<br />
-        1TL Zimt<br />
-        175g Mehl<br />
-        ¼TL Backpulver
-      </h2>
-
-    </div>
-
-
-    <div class="child-two">
-
-      <h1>Schoko-Cookies 2</h1>
-
-      <h2>75g Butter<br />
-        100g Rohzucker<br />
-        ¼TL Salz<br />
-        1 Ei<br />
-        30g Kakaopulver<br />
-        1TL Zimt<br />
-        175g Mehl<br />
-        ¼TL Backpulver
-      </h2>
-
-    </div>
-
-
-    <div class="child-three">
-
-      <h1>Schoko-Cookies 3</h1>
-
-      <h2>75g Butter<br />
-        100g Rohzucker<br />
-        ¼TL Salz<br />
-        1 Ei<br />
-        30g Kakaopulver<br />
-        1TL Zimt<br />
-        175g Mehl<br />
-        ¼TL Backpulver
-      </h2>
-
-    </div>
-
-
-    <div class="child-four">
-
-      <h1>Schoko-Cookies 4</h1>
-
-      <h2>75g Butter<br />
-        100g Rohzucker<br />
-        ¼TL Salz<br />
-        1 Ei<br />
-        30g Kakaopulver<br />
-        1TL Zimt<br />
-        175g Mehl<br />
-        ¼TL Backpulver
-      </h2>
-
-    </div>
-
-  </div>
-
   <main>
     <section>
+      <div class="text_style">
+      <div class="flex-container">
+
+        <div class="bubble">
+          <h1>Schoko-Cookies 1</h1>
+
+          <h2>75g Butter<br />
+            100g Rohzucker<br />
+            ¼TL Salz<br />
+            1 Ei<br />
+            30g Kakaopulver<br />
+            1TL Zimt<br />
+            175g Mehl<br />
+            ¼TL Backpulver
+          </h2>
+        </div>
+
+
+        <div class="bubble">
+          <h1>Schoko-Cookies 2</h1>
+
+          <h2>75g Butter<br />
+            100g Rohzucker<br />
+            ¼TL Salz<br />
+            1 Ei<br />
+            30g Kakaopulver<br />
+            1TL Zimt<br />
+            175g Mehl<br />
+            ¼TL Backpulver
+          </h2>
+        </div>
+
+
+        <div class="bubble">
+          <h1>Schoko-Cookies 3</h1>
+
+          <h2>75g Butter<br />
+            100g Rohzucker<br />
+            ¼TL Salz<br />
+            1 Ei<br />
+            30g Kakaopulver<br />
+            1TL Zimt<br />
+            175g Mehl<br />
+            ¼TL Backpulver
+          </h2>
+        </div>
+
+
+        <div class="bubble">
+          <h1>Schoko-Cookies 4</h1>
+
+          <h2>75g Butter<br />
+            100g Rohzucker<br />
+            ¼TL Salz<br />
+            1 Ei<br />
+            30g Kakaopulver<br />
+            1TL Zimt<br />
+            175g Mehl<br />
+            ¼TL Backpulver
+          </h2>
+        </div>
+      </div>
+    </div>
+
     </section>
   </main>
-
   <footer>
   </footer>
-
   <script src="./assets/main.js" defer></script>
 </body>
-
 </html>
