--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/main.css" />
   <title>Erinnerungen</title>
+
+  <link rel="stylesheet" href="./assets/main.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
+<!--  https://fonts.google.com/selection/embed-->
   <style>
   </style>
 </head>
@@ -17,7 +22,7 @@
   </header>
   <main>
     <section>
-      <div class="text_style">
+      <div class="text-style-heading">
       <div class="flex-container">
 
         <div class="bubble">
