Restructured styling using classes

--- a/index.html
+++ b/index.html
@@ -4,92 +4,88 @@
 <html lang="de">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Erinnerungen</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Erinnerungen</title>
 
-  <link rel="stylesheet" href="./assets/main.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
-<!--  https://fonts.google.com/selection/embed-->
-  <style>
-  </style>
+    <link rel="stylesheet" href="./assets/main.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
+    <!--  https://fonts.google.com/selection/embed-->
+    <style>
+    </style>
 </head>
 
 <body>
-  <header>
-  </header>
-  <main>
+<header>
+</header>
+<main>
     <section>
-      <div class="text-style-heading">
-      <div class="flex-container">
+        <div class="flex-container">
 
-        <div class="bubble">
-          <h1>Schoko-Cookies 1</h1>
+            <div class="bubble-container bubble-color">
+                <h1 class="text-font text-color text-heading">Schoko-Cookies 1</h1>
 
-          <h2>75g Butter<br />
-            100g Rohzucker<br />
-            ¼TL Salz<br />
-            1 Ei<br />
-            30g Kakaopulver<br />
-            1TL Zimt<br />
-            175g Mehl<br />
-            ¼TL Backpulver
-          </h2>
+                <h2 class="text-font text-color text-list">75g Butter<br/>
+                    100g Rohzucker<br/>
+                    ¼TL Salz<br/>
+                    1 Ei<br/>
+                    30g Kakaopulver<br/>
+                    1TL Zimt<br/>
+                    175g Mehl<br/>
+                    ¼TL Backpulver
+                </h2>
+            </div>
+
+            <div class="bubble-container bubble-color">
+                <h1 class="text-font text-color text-heading">Schoko-Cookies 2</h1>
+
+                <h2 class="text-font text-color text-list">75g Butter<br/>
+                    100g Rohzucker<br/>
+                    ¼TL Salz<br/>
+                    1 Ei<br/>
+                    30g Kakaopulver<br/>
+                    1TL Zimt<br/>
+                    175g Mehl<br/>
+                    ¼TL Backpulver
+                </h2>
+            </div>
+
+            <div class="bubble-container bubble-color">
+                <h1 class="text-font text-color text-heading">Schoko-Cookies 3</h1>
+
+                <h2 class="text-font text-color text-list">75g Butter<br/>
+                    100g Rohzucker<br/>
+                    ¼TL Salz<br/>
+                    1 Ei<br/>
+                    30g Kakaopulver<br/>
+                    1TL Zimt<br/>
+                    175g Mehl<br/>
+                    ¼TL Backpulver
+                </h2>
+            </div>
+
+            <div class="bubble-container bubble-color">
+                <h1 class="text-font text-color text-heading">Schoko-Cookies 4</h1>
+
+                <h2 class="text-font text-color text-list">75g Butter<br/>
+                    100g Rohzucker<br/>
+                    ¼TL Salz<br/>
+                    1 Ei<br/>
+                    30g Kakaopulver<br/>
+                    1TL Zimt<br/>
+                    175g Mehl<br/>
+                    ¼TL Backpulver
+                </h2>
+            </div>
+            </div>
         </div>
-
-
-        <div class="bubble">
-          <h1>Schoko-Cookies 2</h1>
-
-          <h2>75g Butter<br />
-            100g Rohzucker<br />
-            ¼TL Salz<br />
-            1 Ei<br />
-            30g Kakaopulver<br />
-            1TL Zimt<br />
-            175g Mehl<br />
-            ¼TL Backpulver
-          </h2>
-        </div>
-
-
-        <div class="bubble">
-          <h1>Schoko-Cookies 3</h1>
-
-          <h2>75g Butter<br />
-            100g Rohzucker<br />
-            ¼TL Salz<br />
-            1 Ei<br />
-            30g Kakaopulver<br />
-            1TL Zimt<br />
-            175g Mehl<br />
-            ¼TL Backpulver
-          </h2>
-        </div>
-
-
-        <div class="bubble">
-          <h1>Schoko-Cookies 4</h1>
-
-          <h2>75g Butter<br />
-            100g Rohzucker<br />
-            ¼TL Salz<br />
-            1 Ei<br />
-            30g Kakaopulver<br />
-            1TL Zimt<br />
-            175g Mehl<br />
-            ¼TL Backpulver
-          </h2>
-        </div>
-      </div>
-    </div>
 
     </section>
-  </main>
-  <footer>
-  </footer>
-  <script src="./assets/main.js" defer></script>
+</main>
+<footer>
+</footer>
+<script src="./assets/main.js" defer></script>
 </body>
 </html>
