--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section>
         <div class="flex-container">
 
-            <div class="bubble-container bubble-color">
+            <div class="bubble-container">
                 <h1 class="text-font text-color text-heading">Schoko-Cookies 1</h1>
 
                 <h2 class="text-font text-color text-list">75g Butter<br/>
@@ -38,10 +38,10 @@
                 </h2>
             </div>
 
-            <div class="bubble-container bubble-color">
-                <h1 class="text-font text-color text-heading">Schoko-Cookies 2</h1>
+            <div class="bubble-container">
+                <h1 class="text-font text-heading">Schoko-Cookies 2</h1>
 
-                <h2 class="text-font text-color text-list">75g Butter<br/>
+                <h2 class="text-font text-list">75g Butter<br/>
                     100g Rohzucker<br/>
                     ¼TL Salz<br/>
                     1 Ei<br/>
@@ -52,10 +52,10 @@
                 </h2>
             </div>
 
-            <div class="bubble-container bubble-color">
-                <h1 class="text-font text-color text-heading">Schoko-Cookies 3</h1>
+            <div class="bubble-container">
+                <h1 class="text-font text-heading">Schoko-Cookies 3</h1>
 
-                <h2 class="text-font text-color text-list">75g Butter<br/>
+                <h2 class="text-font text-list">75g Butter<br/>
                     100g Rohzucker<br/>
                     ¼TL Salz<br/>
                     1 Ei<br/>
@@ -66,10 +66,10 @@
                 </h2>
             </div>
 
-            <div class="bubble-container bubble-color">
-                <h1 class="text-font text-color text-heading">Schoko-Cookies 4</h1>
+            <div class="bubble-container">
+                <h1 class="text-font text-heading">Schoko-Cookies 4</h1>
 
-                <h2 class="text-font text-color text-list">75g Butter<br/>
+                <h2 class="text-font text-list">75g Butter<br/>
                     100g Rohzucker<br/>
                     ¼TL Salz<br/>
                     1 Ei<br/>
@@ -79,7 +79,7 @@
                     ¼TL Backpulver
                 </h2>
             </div>
-            </div>
+        </div>
 
     </section>
 </main>
