Created .reminder-item class for dom-manipulation

--- a/index.html
+++ b/index.html
@@ -79,8 +79,14 @@
                     ¼TL Backpulver
                 </h2>
             </div>
-        </div>
 
+            <div class="reminder-item">
+                <h2 class="text-font text-list">75g Butter<br/>
+                </h2>
+            </div>
+
+
+        </div>
     </section>
 </main>
 <footer>
