vertically aligned checkbox and text

--- a/index.html
+++ b/index.html
@@ -81,12 +81,10 @@
             </div>
 
             <div class="reminder-item">
-                <h2 class="text-font text-list">75g Butter<br/>
-                </h2>
+                <input type="checkbox" id="reminder-checkbox">
+                <label for="reminder-checkbox" class="text-font text-list">75g Butter<br/>
+                    100g Rohzucker</label>
             </div>
-
-
-        </div>
     </section>
 </main>
 <footer>
