Replaced static with responsive units for text / margins at big and small text sizes.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
-    <!--  https://fonts.google.com/selection/embed-->
+    <!--  https://fonts.google.com/specimen/Comfortaa -->
     <style>
     </style>
 </head>
@@ -82,9 +82,18 @@
 
             <div class="reminder-item">
                 <input type="checkbox" id="reminder-checkbox">
-                <label for="reminder-checkbox" class="text-font text-list">75g Butter<br/>
-                    100g Rohzucker</label>
+                <label for="reminder-checkbox" class="text-font text-list">indented to prevent wrapping underneath the
+                    checkbox. indented to prevent wrapping underneath the checkbox<br/>
+                    100g Rohzucker</label><br/>
+
+                <input type="checkbox" id="reminder-checkbox">
+                <label for="reminder-checkbox" class="text-font text-list">75g Butter</label><br/>
+
+
+                <input type="checkbox" id="reminder-checkbox">
+                <label for="reminder-checkbox" class="text-font text-list">75g Butter</label><br/>
             </div>
+        </div>
     </section>
 </main>
 <footer>
