--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                     1 Ei<br/>
                     30g Kakaopulver<br/>
                     1TL Zimt<br/>
-                    175g Mehl<br/>
-                    ¼TL Backpulver
+
                 </h2>
             </div>
 
@@ -59,15 +58,16 @@
                     100g Rohzucker<br/>
                     ¼TL Salz<br/>
                     1 Ei<br/>
-                    30g Kakaopulver<br/>
-                    1TL Zimt<br/>
-                    175g Mehl<br/>
-                    ¼TL Backpulver
                 </h2>
             </div>
 
             <div class="bubble-container">
                 <h1 class="text-font text-heading">Schoko-Cookies 4</h1>
+
+
+                <input type="checkbox" id="reminder-checkbox">
+                <label for="reminder-checkbox" class="text-font text-list">indented </label><br/>
+
 
                 <h2 class="text-font text-list">75g Butter<br/>
                     100g Rohzucker<br/>
