Added min widht to bubble class to make bubbles even width

--- a/index.html
+++ b/index.html
@@ -25,74 +25,53 @@
         <div class="flex-container">
 
             <div class="bubble-container">
-                <h1 class="text-font text-color text-heading">Schoko-Cookies 1</h1>
-
-                <h2 class="text-font text-color text-list">75g Butter<br/>
-                    100g Rohzucker<br/>
-                    ¼TL Salz<br/>
-                    1 Ei<br/>
-                    30g Kakaopulver<br/>
-                    1TL Zimt<br/>
-                    175g Mehl<br/>
-                    ¼TL Backpulver
-                </h2>
+                <div class="reminder-item"><input type="checkbox" id="reminder-checkbox">
+                    <label for="reminder-checkbox"</label>
+                    <h2 class=" reminder-text text-font text-list">indented to prevent wrapping underneath the
+                        checkbox. indented to prevent wrapping underneath the checkbox</h2>
+                </div>
+                <div class="reminder-item"><input type="checkbox" id="reminder-checkbox">
+                    <label for="reminder-checkbox"</label>
+                    <h2 class=" reminder-text text-font text-list">indented to prevent wrapping underneath the
+                        checkbox. indented to prevent wrapping underneath the checkbox</h2>
+                </div>
+                <div class="reminder-item"><input type="checkbox" id="reminder-checkbox">
+                    <label for="reminder-checkbox"</label>
+                    <h2 class=" reminder-text text-font text-list">100g Rohzucker</h2>
+                </div>
             </div>
+
 
             <div class="bubble-container">
-                <h1 class="text-font text-heading">Schoko-Cookies 2</h1>
-
-                <h2 class="text-font text-list">75g Butter<br/>
-                    100g Rohzucker<br/>
-                    ¼TL Salz<br/>
-                    1 Ei<br/>
-                    30g Kakaopulver<br/>
-                    1TL Zimt<br/>
-
-                </h2>
+                <div class="reminder-item"><input type="checkbox" id="reminder-checkbox">
+                    <label for="reminder-checkbox"</label>
+                    <h2 class=" reminder-text text-font text-list">indented to prevent wrapping underneath the
+                        checkbox. indented to prevent wrapping underneath the checkbox</h2>
+                </div>
+                <div class="reminder-item"><input type="checkbox" id="reminder-checkbox">
+                    <label for="reminder-checkbox"</label>
+                    <h2 class=" reminder-text text-font text-list">indented to prevent wrapping underneath the
+                        checkbox. indented to prevent wrapping underneath the checkbox</h2>
+                </div>
             </div>
+
 
             <div class="bubble-container">
-                <h1 class="text-font text-heading">Schoko-Cookies 3</h1>
-
-                <h2 class="text-font text-list">75g Butter<br/>
-                    100g Rohzucker<br/>
-                    ¼TL Salz<br/>
-                    1 Ei<br/>
-                </h2>
+                <div class="reminder-item"><input type="checkbox" id="reminder-checkbox">
+                    <label for="reminder-checkbox"</label>
+                    <h2 class=" reminder-text text-font text-list">indented to prevent wrapping underneath the
+                        checkbox. indented to prevent wrapping underneath the checkbox</h2>
+                </div>
             </div>
+
 
             <div class="bubble-container">
-                <h1 class="text-font text-heading">Schoko-Cookies 4</h1>
-
-
-                <input type="checkbox" id="reminder-checkbox">
-                <label for="reminder-checkbox" class="text-font text-list">indented </label><br/>
-
-
-                <h2 class="text-font text-list">75g Butter<br/>
-                    100g Rohzucker<br/>
-                    ¼TL Salz<br/>
-                    1 Ei<br/>
-                    30g Kakaopulver<br/>
-                    1TL Zimt<br/>
-                    175g Mehl<br/>
-                    ¼TL Backpulver
-                </h2>
+                <div class="reminder-item"><input type="checkbox" id="reminder-checkbox">
+                    <label for="reminder-checkbox"</label>
+                    <h2 class=" reminder-text text-font text-list">indented
             </div>
 
-            <div class="reminder-item">
-                <input type="checkbox" id="reminder-checkbox">
-                <label for="reminder-checkbox" class="text-font text-list">indented to prevent wrapping underneath the
-                    checkbox. indented to prevent wrapping underneath the checkbox<br/>
-                    100g Rohzucker</label><br/>
 
-                <input type="checkbox" id="reminder-checkbox">
-                <label for="reminder-checkbox" class="text-font text-list">75g Butter</label><br/>
-
-
-                <input type="checkbox" id="reminder-checkbox">
-                <label for="reminder-checkbox" class="text-font text-list">75g Butter</label><br/>
-            </div>
         </div>
     </section>
 </main>
