Fixed errors in syntax

--- a/index.html
+++ b/index.html
@@ -25,52 +25,57 @@
         <div class="flex-container">
 
             <div class="bubble-container">
-                <div class="reminder-item"><input type="checkbox" id="reminder-checkbox">
-                    <label for="reminder-checkbox"</label>
-                    <h2 class=" reminder-text text-font text-list">indented to prevent wrapping underneath the
+                <div class="reminder-item">
+                    <input type="checkbox" id="reminder-checkbox">
+                    <label for="reminder-checkbox"></label>
+                    <h2 class="reminder-text text-font text-list">indented to prevent wrapping underneath the
                         checkbox. indented to prevent wrapping underneath the checkbox</h2>
                 </div>
-                <div class="reminder-item"><input type="checkbox" id="reminder-checkbox">
-                    <label for="reminder-checkbox"</label>
-                    <h2 class=" reminder-text text-font text-list">indented to prevent wrapping underneath the
+                <div class="reminder-item">
+                    <input type="checkbox" id="reminder-checkbox">
+                    <label for="reminder-checkbox"></label>
+                    <h2 class="reminder-text text-font text-list">indented to prevent wrapping underneath the
                         checkbox. indented to prevent wrapping underneath the checkbox</h2>
                 </div>
-                <div class="reminder-item"><input type="checkbox" id="reminder-checkbox">
-                    <label for="reminder-checkbox"</label>
-                    <h2 class=" reminder-text text-font text-list">100g Rohzucker</h2>
+                <div class="reminder-item">
+                    <input type="checkbox" id="reminder-checkbox">
+                    <label for="reminder-checkbox"></label>
+                    <h2 class="reminder-text text-font text-list">indented to prevent wrapping underneath the
+                        checkbox. indented to prevent wrapping underneath the checkbox</h2>
                 </div>
             </div>
-
 
             <div class="bubble-container">
-                <div class="reminder-item"><input type="checkbox" id="reminder-checkbox">
-                    <label for="reminder-checkbox"</label>
-                    <h2 class=" reminder-text text-font text-list">indented to prevent wrapping underneath the
+                <div class="reminder-item">
+                    <input type="checkbox" id="reminder-checkbox">
+                    <label for="reminder-checkbox"></label>
+                    <h2 class="reminder-text text-font text-list">indented to prevent wrapping underneath the
                         checkbox. indented to prevent wrapping underneath the checkbox</h2>
                 </div>
-                <div class="reminder-item"><input type="checkbox" id="reminder-checkbox">
-                    <label for="reminder-checkbox"</label>
-                    <h2 class=" reminder-text text-font text-list">indented to prevent wrapping underneath the
+                <div class="reminder-item">
+                    <input type="checkbox" id="reminder-checkbox">
+                    <label for="reminder-checkbox"></label>
+                    <h2 class="reminder-text text-font text-list">indented to prevent wrapping underneath the
                         checkbox. indented to prevent wrapping underneath the checkbox</h2>
                 </div>
             </div>
-
 
             <div class="bubble-container">
-                <div class="reminder-item"><input type="checkbox" id="reminder-checkbox">
-                    <label for="reminder-checkbox"</label>
-                    <h2 class=" reminder-text text-font text-list">indented to prevent wrapping underneath the
+                <div class="reminder-item">
+                    <input type="checkbox" id="reminder-checkbox">
+                    <label for="reminder-checkbox"></label>
+                    <h2 class="reminder-text text-font text-list">indented to prevent wrapping underneath the
                         checkbox. indented to prevent wrapping underneath the checkbox</h2>
                 </div>
             </div>
 
-
             <div class="bubble-container">
-                <div class="reminder-item"><input type="checkbox" id="reminder-checkbox">
-                    <label for="reminder-checkbox"</label>
-                    <h2 class=" reminder-text text-font text-list">indented
+                <div class="reminder-item">
+                    <input type="checkbox" id="reminder-checkbox">
+                    <label for="reminder-checkbox"></label>
+                    <h2 class="reminder-text text-font text-list">indented</h2>
+                </div>
             </div>
-
 
         </div>
     </section>
