Started on toolbar.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erinnerungen</title>
 
+    <script src="./assets/main.js" defer></script>
     <link rel="stylesheet" href="./assets/main.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,10 +21,46 @@
 
 <body>
 <header>
+
+
+
 </header>
 <main>
     <section>
+        <div class="toolbar">
+        </div>
+
         <div class="flex-container">
+
+            <div class="list-group">
+                <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
+
+                <h2 class="text-font text-color text-list">75g Butter<br/>
+                    100g Rohzucker<br/>
+                    ¼TL Salz<br/>
+                    1 Ei<br/>
+                    30g Kakaopulver<br/>
+                    1TL Zimt<br/>
+                    175g Mehl<br/>
+                    ¼TL Backpulver
+                </h2>
+            </div>
+
+
+            <div class="list-group">
+                <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
+
+                <h2 class="text-font text-color text-list">75g Butter<br/>
+                    100g Rohzucker<br/>
+                    ¼TL Salz<br/>
+                    1 Ei<br/>
+                    30g Kakaopulver<br/>
+                    1TL Zimt<br/>
+                    175g Mehl<br/>
+                    ¼TL Backpulver
+                </h2>
+            </div>
+
 
             <div class="list-group">
                 <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
@@ -59,18 +96,10 @@
                 <button onclick="createReminder()">Create Reminder</button>
             </div>
 
-
-            <div class="list-group">
-                    <input type="checkbox" id="button-checkbox">
-                    <label for="button-checkbox" class="text-font text-list">75g Butter</label><br/>
-                </h2>
-            </div>
-
         </div>
     </section>
 </main>
 <footer>
 </footer>
-<script src="./assets/main.js" defer></script>
 </body>
 </html>
