--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erinnerungen</title>
-
-    <script src="./assets/main.js" defer></script>
     <link rel="stylesheet" href="./assets/main.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,11 +25,60 @@
 </header>
 <main>
     <section>
-        <div class="toolbar">
-        </div>
-
         <div class="flex-container">
 
+            <div class="flex-container-toolbar">
+
+                <div class="toolbar">
+                </div>
+
+            </div>
+
+
+            <div class="list-group">
+                <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
+
+                <h2 class="text-font text-color text-list">75g Butter<br/>
+                    100g Rohzucker<br/>
+                    ¼TL Salz<br/>
+                    1 Ei<br/>
+                    30g Kakaopulver<br/>
+                    1TL Zimt<br/>
+                    175g Mehl<br/>
+                    ¼TL Backpulver
+                </h2>
+            </div>
+
+
+            <div class="list-group">
+                <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
+
+                <h2 class="text-font text-color text-list">75g Butter<br/>
+                    100g Rohzucker<br/>
+                    ¼TL Salz<br/>
+                    1 Ei<br/>
+                    30g Kakaopulver<br/>
+                    1TL Zimt<br/>
+                    175g Mehl<br/>
+                    ¼TL Backpulver
+                </h2>
+            </div>
+
+
+            <div class="list-group">
+                <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
+
+                <h2 class="text-font text-color text-list">75g Butter<br/>
+                    100g Rohzucker<br/>
+                    ¼TL Salz<br/>
+                    1 Ei<br/>
+                    30g Kakaopulver<br/>
+                    1TL Zimt<br/>
+                    175g Mehl<br/>
+                    ¼TL Backpulver
+                </h2>
+            </div>
+
             <div class="list-group">
                 <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
 
@@ -75,7 +122,6 @@
                     ¼TL Backpulver
                 </h2>
             </div>
-
 
             <div class="list-group">
                 <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
@@ -101,5 +147,6 @@
 </main>
 <footer>
 </footer>
+<script src="./assets/main.js" defer></script>
 </body>
 </html>
