Broken flex-items.

--- a/index.html
+++ b/index.html
@@ -19,127 +19,91 @@
 
 <body>
 <header>
-
-
-
 </header>
 <main>
     <section>
         <div class="flex-container">
 
-            <div class="flex-container-toolbar">
+            <div class="flex-container-fixed">
 
                 <div class="toolbar">
                 </div>
 
             </div>
 
-
-            <div class="list-group">
-                <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
-
-                <h2 class="text-font text-color text-list">75g Butter<br/>
-                    100g Rohzucker<br/>
-                    ¼TL Salz<br/>
-                    1 Ei<br/>
-                    30g Kakaopulver<br/>
-                    1TL Zimt<br/>
-                    175g Mehl<br/>
-                    ¼TL Backpulver
-                </h2>
-            </div>
+            <div class="flex-container-scroll">
 
 
-            <div class="list-group">
-                <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
+                <div class="list-group">
+                    <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
 
-                <h2 class="text-font text-color text-list">75g Butter<br/>
-                    100g Rohzucker<br/>
-                    ¼TL Salz<br/>
-                    1 Ei<br/>
-                    30g Kakaopulver<br/>
-                    1TL Zimt<br/>
-                    175g Mehl<br/>
-                    ¼TL Backpulver
-                </h2>
-            </div>
+                    </h2>
+                    <button onclick="createReminder()">Create Reminder</button><br/>
+
+                    <input type="checkbox" id="button-checkbox">
+                    <label for="button-checkbox" class="text-font text-list">100g Rohzucker</label><br/>
 
 
-            <div class="list-group">
-                <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
+                    <input type="checkbox" id="button-checkbox">
+                    <label for="button-checkbox" class="text-font text-list">¼TL Salz</label><br/>
 
-                <h2 class="text-font text-color text-list">75g Butter<br/>
-                    100g Rohzucker<br/>
-                    ¼TL Salz<br/>
-                    1 Ei<br/>
-                    30g Kakaopulver<br/>
-                    1TL Zimt<br/>
-                    175g Mehl<br/>
-                    ¼TL Backpulver
-                </h2>
-            </div>
+                    <input type="checkbox" id="button-checkbox">
+                    <label for="button-checkbox" class="text-font text-list">1 Ei</label><br/>
 
-            <div class="list-group">
-                <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
+                    <input type="checkbox" id="button-checkbox">
+                    <label for="button-checkbox" class="text-font text-list">30g Kakaopulver</label><br/>
 
-                <h2 class="text-font text-color text-list">75g Butter<br/>
-                    100g Rohzucker<br/>
-                    ¼TL Salz<br/>
-                    1 Ei<br/>
-                    30g Kakaopulver<br/>
-                    1TL Zimt<br/>
-                    175g Mehl<br/>
-                    ¼TL Backpulver
-                </h2>
-            </div>
+                    <input type="checkbox" id="button-checkbox">
+                    <label for="button-checkbox" class="text-font text-list">1TL Zimt</label><br/>
 
+                    <input type="checkbox" id="button-checkbox">
+                    <label for="button-checkbox" class="text-font text-list">175g Mehl</label><br/>
 
-            <div class="list-group">
-                <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
-
-                <h2 class="text-font text-color text-list">75g Butter<br/>
-                    100g Rohzucker<br/>
-                    ¼TL Salz<br/>
-                    1 Ei<br/>
-                    30g Kakaopulver<br/>
-                    1TL Zimt<br/>
-                    175g Mehl<br/>
-                    ¼TL Backpulver
-                </h2>
-            </div>
-
-
-            <div class="list-group">
-                <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
-
-                <h2 class="text-font text-color text-list">75g Butter<br/>
-                    100g Rohzucker<br/>
-                    ¼TL Salz<br/>
-                    1 Ei<br/>
-                    30g Kakaopulver<br/>
-                    1TL Zimt<br/>
-                    175g Mehl<br/>
-                    ¼TL Backpulver
-                </h2>
-            </div>
-
-            <div class="list-group">
-                <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
-
-                <h2 class="text-font text-color text-list">75g Butter<br/>
-                    100g Rohzucker<br/>
-                    ¼TL Salz<br/>
-                    1 Ei<br/>
-                    30g Kakaopulver<br/>
-                    1TL Zimt<br/>
-                    175g Mehl<br/>
-                    ¼TL Backpulver<br/>
+                    <input type="checkbox" id="button-checkbox">
+                    <label for="button-checkbox" class="text-font text-list">¼TL Backpulver</label><br/>
 
                     <input type="checkbox" id="button-checkbox">
                     <label for="button-checkbox" class="text-font text-list">75g Butter</label><br/>
 
-                </h2>
-                <button onclick="createReminder()">Create Reminder</button>
+                </div>
+
+
+
+                <div class="list-group">
+                    <h1 class="text-font text-color text-title">Schoko-Cookies</h1>
+
+                    </h2>
+                    <button onclick="createReminder()">Create Reminder</button><br/>
+
+                    <input type="checkbox" id="button-checkbox">
+                    <label for="button-checkbox" class="text-font text-list">100g Rohzucker</label><br/>
+
+
+                    <input type="checkbox" id="button-checkbox">
+                    <label for="button-checkbox" class="text-font text-list">¼TL Salz</label><br/>
+
+                    <input type="checkbox" id="button-checkbox">
+                    <label for="button-checkbox" class="text-font text-list">1 Ei</label><br/>
+
+                    <input type="checkbox" id="button-checkbox">
+                    <label for="button-checkbox" class="text-font text-list">30g Kakaopulver</label><br/>
+
+                    <input type="checkbox" id="button-checkbox">
+                    <label for="button-checkbox" class="text-font text-list">1TL Zimt</label><br/>
+
+                    <input type="checkbox" id="button-checkbox">
+                    <label for="button-checkbox" class="text-font text-list">175g Mehl</label><br/>
+
+                    <input type="checkbox" id="button-checkbox">
+                    <label for="button-checkbox" class="text-font text-list">¼TL Backpulver</label><br/>
+
+                    <input type="checkbox" id="button-checkbox">
+                    <label for="button-checkbox" class="text-font text-list">75g Butter</label><br/>
+
+                </div>
+
+
+
             </div>
 
         </div>
